deployment-geoserver/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: geoserver-pod
spec:
  serviceName: geoserver-service
  replicas: 1
  selector:
    matchLabels:
      app: geoserver-pod
  template:
    metadata:
      labels:
        app: geoserver-pod
    spec:
      containers:
        - name: geoserver
          image: kartoza/geoserver:2.25.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http-geoserver
              protocol: TCP

              startupProbe:            
                httpGet:
                  path: /geoserver
                  port: http-geoserver
                  scheme: HTTP
                initialDelaySeconds: 30
                periodSeconds: 60
                failureThreshold: 10
    
              livenessProbe:
                httpGet:
                  path: /geoserver
                  port: http-geoserver
                  scheme: HTTP
                periodSeconds: 60
                failureThreshold: 10
    
              readinessProbe:
                httpGet:
                  path: /geoserver
                  port: http-geoserver
                  scheme: HTTP
                periodSeconds: 60
                failureThreshold: 10

          volumeMounts:
            - name: geoserver-data-dir
              mountPath: /opt/geoserver/data_dir
            - name: geowebcache-cache-dir
              mountPath: /opt/geoserver/data_dir/gwc
          resources:
            requests:
              memory: "75Gi"
              cpu: "3000m"
            limits:
              memory: "100Gi"
              cpu: "30000m"
      
      volumes:
        - name: geoserver-data-dir
          persistentVolumeClaim:
            claimName: geoserver-data-dir-pvc
        - name: geowebcache-cache-dir
          persistentVolumeClaim:
            claimName: geowebcache-cache-dir-pvc
