deployment-geoserver/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: geoserver-instance
spec:
  rules:
  - host: geoserver-satellite-images.lab.sspcloud.fr
    http:
      paths:
      - backend:
          service:
            name: geoserver-instance
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls: 
  - hosts:
    - geoserver-satellite-images.lab.sspcloud.fr
